--- a/extracted.bib
+++ b/extracted.bib
@@ -420,46 +420,6 @@
                    structure. (abridged)},
 }
 
-@article{Girart2017a,
-  author =        {{Girart}, J.~M. and {Estalella}, R. and
-                   {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
-                   {Frau}, P and {Galvan-Madrid}, R. and {Rao}, R. and
-                   {Busquet}, G. and {Ju{\'a}rez}, C.},
-  journal =       {ArXiv e-prints},
-  month =         jul,
-  title =         {{The circumestellar disk of the B0 protostar powering
-                   the HH 80-81 radio jet}},
-  year =          {2017},
-  abstract =      {We present subarcsecond angular resolution
-                   observations carried out with the Submillimeter Array
-                   (SMA) at 880 $\mu$m centered at the B0-type protostar
-                   GGD27~MM1, the driving source of the parsec scale HH
-                   80-81 jet. We constrain its polarized continuum
-                   emission to be $\lesssim0.8\%$ at this wavelength.
-                   Its submm spectrum is dominated by sulfur-bearing
-                   species tracing a rotating disk--like structure (SO
-                   and SO$_2$ isotopologues mainly), but also shows
-                   HCN-bearing and CH$_3$OH lines, which trace the disk
-                   and the outflow cavity walls excavated by the HH
-                   80-81 jet. The presence of many sulfurated lines
-                   could indicate the presence of shocked gas at the
-                   disk's centrifugal barrier or that MM1 is a hot core
-                   at an evolved stage. The resolved SO$_2$ emission
-                   traces very well the disk kinematics and we fit the
-                   SMA observations using a thin-disk Keplerian model,
-                   which gives the inclination (47$^{\circ}$), the inner
-                   ($\lesssim170$ AU) and outer ($\sim950-1300$~AU)
-                   radii and the disk's rotation velocity (3.4 km
-                   s$^{-1}$ at a putative radius of 1700 AU). We roughly
-                   estimate a protostellar dynamical mass of 4-18\msun.
-                   MM2 and WMC cores show, comparatively, an almost
-                   empty spectra suggesting that they are associated
-                   with extended emission detected in previous
-                   low-angular resolution observations, and therefore
-                   indicating youth (MM2) or the presence of a less
-                   massive object (WMC).},
-}
-
 @article{Caris2004a,
   author =        {{Caris}, M. and {Lewen}, F. and
                    {M{\"u}ller}, H.~S.~P. and {Winnewisser}, G.},
@@ -765,5 +725,49 @@
                    2.5-5 for the main rotational transitions, whatever
                    the temperature range.},
   doi =           {10.1051/0004-6361:20065718},
+}
+
+@inproceedings{Dickinson1975a,
+  author =        {{Dickinson}, A.~S. and {Richards}, D.},
+  booktitle =     {Physics of Electronic and Atomic Collisions: ICPEAC
+                   IX},
+  editor =        {{Risley}, J.~S. and {Geballe}, R.},
+  pages =         {291},
+  title =         {{Rotational Excitation of Diatomic Molecules by
+                   Electrons}},
+  year =          {1975},
+  abstract =      {Not Available},
+}
+
+@article{Bergin2007a,
+  author =        {{Bergin}, E.~A. and {Tafalla}, M.},
+  journal =       {\araa},
+  month =         sep,
+  pages =         {339-396},
+  title =         {{Cold Dark Clouds: The Initial Conditions for Star
+                   Formation}},
+  volume =        {45},
+  year =          {2007},
+  abstract =      {Cold dark clouds are nearby members of the densest
+                   and coldest phase in the Galactic interstellar
+                   medium, and represent the most accessible sites where
+                   stars like our Sun are currently being born. In this
+                   review we discuss recent progress in their study,
+                   including the newly discovered IR dark clouds that
+                   are likely precursors to stellar clusters. At large
+                   scales, dark clouds present filamentary mass
+                   distributions with motions dominated by supersonic
+                   turbulence. At small, subparsec scales, a population
+                   of subsonic starless cores provides a unique glimpse
+                   of the conditions prior to stellar birth. Recent
+                   studies of starless cores reveal a combination of
+                   simple physical properties together with a complex
+                   chemical structure dominated by the freeze-out of
+                   molecules onto cold dust grains. Elucidating this
+                   combined structure is both an observational and
+                   theoretical challenge whose solution will bring us
+                   closer to understanding how molecular gas condenses
+                   to form stars.},
+  doi =           {10.1146/annurev.astro.45.071206.100404},
 }
 
