--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -502,6 +502,34 @@ v=1-0 J=10-9 transition, or similar}
 %optically thick would also drive the rotational states to be, which would be
 %inconsistent with the observations.
 
+\textbf{(Scenario 4) Collisions with electrons}
+Collisions with electrons are much more efficient than collisions with \hh.
+Using the approximations from \citet{Dickinson1975a}, we find that collision
+rates between both NaCl and KCl and electrons in the J=5-50 v=0 states are
+$C\approx10^{-5}$ cm$^{3}$ \pers.  These rates imply a critical electron
+abundance $X_e = C(\hh)/C(e^-) \approx 10^{-5}$, where we again assume
+$C(\hh)\approx10^{-10}$ cm$^3$ \pers.  In other words, electrons are
+$10^5\times$ more efficient at exciting these molecules than \hh.
+
+The electron abundance may be higher than the critical value.
+In typical low-mass disks, electron abundances $X_e \geq 10^4$ 
+occur in the upper layers of the disk, where some UV radiation
+is able to ionize H and C to H+ and C+ \citep{Bergin2007a}.
+However, deeper into these disks, only X-rays and cosmic rays
+can penetrate to ionize neutrals, resulting in abundances too
+small to be relevant ($X_e < 10^{-6}$).  
+The importance of this scenario is critically sensitive to the ionization rate
+in the salt-bearing portion of the disk, which is uncertain.
+
+\ag{Two questions:
+(1) Is the electron temperature going to be different from the
+gas temperature?  I assume so, probably much higher!
+(2) What do electrons do in terms of vibrational excitation?
+The \citet{Dickinson1975a} work is focused entirely on vibrational
+excitation.
+}
+
+
 
 %\textbf{Text from earlier}
 %
@@ -621,7 +649,7 @@ the dust must be destroyed almost immediately as it is launched into the outflow
 
 In this scenario,  NaCl and KCl molecules are sputtered from the grains by
 high-energy gas particles.  The most plausible means to achieve the energies
-required to sputtered grains is with strong shocks.  In \sourcei, it seems
+required to sputter grains is with strong shocks.  In \sourcei, it seems
 unlikely that there would be very strong shocks in the disk, but there are
 high-velocity shocks throughout the outflow. Strong SiO emission is observed in
 the inner part of the outflow
@@ -641,8 +669,7 @@ and outflow must be driven entirely by excitation, since they should both be
 entirely in the gas phase.  This hypothesis is plausible, since the
 SiO v=0 J=8-7 transition shown in Figure \ref{fig:sioonnacl} has $A_{8,7} =
 2.2030\ee{-3}$ \pers, while the NaCl v=2 J=26-25 transition has $A_{26,25} =
-1.8242\ee{-2}$ \pers, and their collision rates are nearly the same (
-assuming SiS and NaCl have
+1.8242\ee{-2}$ \pers, and their collision rates are nearly the same (assuming SiS and NaCl have
 identical collision rates, as above, and that vibrational excitation does not
 change the rates), implying that the critical density of the
 NaCl transition is $\sim10\times$ higher.
