--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -139,7 +139,13 @@ at the disk ends, where the line is broadened by the line-of-sight motion,
 and spectra toward the disk center, where they are narrow, the line widths
 in the stacked spectra are somewhat broader than the intrinsic line width.
 \rlp{Gee, I would have thought that shifting everything to v=0 would make
-the lines narrower, not wider.}
+the lines narrower, not wider.}\ag{The narrowest possible line width to observe
+would be at the center of the disk, near the star, since you're observing only
+tangential motion (the line of sight motion is zero).  That is the ``intrinsic''
+linewidth, in this case.  The broadest linewidth observed, as Mel pointed out,
+is at the disk edges, where the orbital velocity is predominantly along the line-of-sight,
+so those spectra are broader than the intrinsic width.  The average spectra include
+all positions, so they'll be broader than intrinsic, but narrower than the disk edges.}
 % this is what I'd prefer to say, perhaps in the figure caption:
 % Effectively, the spectrum shown in Fig 1 is the output of a matched filter;
 % the line profiles are narrower than one would obtain with a straight
