--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -430,7 +430,7 @@ populations are not well characterized by a temperature at all.
 \subsubsection{Line Excitation Models}
 We explore several explanations for the observed line excitation:
 
-\par{\textbf{Ultraviolet Excitation:}}
+\par{\textbf{(1) Ultraviolet Excitation:}}
 In this model, collisions and infrared radiation have no effect and can be
 ignored completely.  Instead, higher-energy photons are responsible for the
 excitation.  In order to directly excite the higher observed vibrationally
@@ -465,7 +465,7 @@ UV radiation would be produced or could penentrate to the parts of the disk wher
 the salt emission comes from.  Even a light haze of dust in the upper layers of
 the disk would likely shield the molecules from such illumination.
 
-\par{\textbf{Collisional excitation sets the rotational temperatures, radiation
+\par{\textbf{(2) Collisional excitation sets the rotational temperatures, radiation
 sets the vibration:}}
 In Figure \ref{fig:rotationdiagrams}, we show that it is possible to acquire
 reasonable fits to the rotational transitions within a single vibrational state,
@@ -515,7 +515,7 @@ strong enough to produce similar intensities across the v=0 to v=6 vibrational
 states, why have the rotational states not reached equilibrium with the radiation
 field?
 
-\textbf{(Scenario 3) The rovibrational transitions are optically thick up to
+\textbf{(3) The rovibrational transitions are optically thick up to
 v$\sim$6, while the rotational transitions remain optically thin.}
 
 In this scenario, we assume that the salt molecules are all in an `atmosphere'
@@ -539,7 +539,7 @@ v=1-0 J=10-9 transition, or similar}
 %optically thick would also drive the rotational states to be, which would be
 %inconsistent with the observations.
 
-\textbf{(Scenario 4) Collisions with electrons}
+\textbf{(4) Collisions with electrons}
 Collisions with electrons are much more efficient than collisions with \hh.
 Using the approximations from \citet{Dickinson1975a}, we find that collision
 rates between both NaCl and KCl and electrons in the J=5-50 v=0 states are
