--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -137,15 +137,10 @@ traces material just above and below the optically thick continuum disk
 emission associated with the outflow.  Note that because it averages spectra
 at the disk ends, where the line is broadened by the line-of-sight motion,
 and spectra toward the disk center, where they are narrow, the line widths
-in the stacked spectra are somewhat broader than the intrinsic line width.
-\rlp{Gee, I would have thought that shifting everything to v=0 would make
-the lines narrower, not wider.}\ag{The narrowest possible line width to observe
-would be at the center of the disk, near the star, since you're observing only
-tangential motion (the line of sight motion is zero).  That is the ``intrinsic''
-linewidth, in this case.  The broadest linewidth observed, as Mel pointed out,
-is at the disk edges, where the orbital velocity is predominantly along the line-of-sight,
-so those spectra are broader than the intrinsic width.  The average spectra include
-all positions, so they'll be broader than intrinsic, but narrower than the disk edges.}
+in the stacked spectra are broader than the line width one would observe
+with an infinitesimal beam.  \ag{This sentence is probably one too many:} The stacked spectrum is equivalent to that
+obtained with a matched filter using a narrow (delta-function) filter at each
+position tuned to the appropriate centroid velocity.
 % this is what I'd prefer to say, perhaps in the figure caption:
 % Effectively, the spectrum shown in Fig 1 is the output of a matched filter;
 % the line profiles are narrower than one would obtain with a straight
