Updates from ShareLaTeX

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -234,6 +234,9 @@ in vibrational states higher than those measured in the laboratory.
 
 % We therefore used the predictions from the \citet{Barton2014a} catalog
 % to identify lines with vibrational states $v>2$ for KCl and $v>4$ for NaCl.  
+\rlp{There's a paper by Cabezas et al, ApJ 2016 that claims to derive highly
+accurate frequencies, A coefficients, etc for NaCl up to J=150 and v=8; how
+does that fit into this story??}
 
 In using these catalogs,
 we found a systematic discrepancy %in 
