add new reference for v=1

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -231,12 +231,13 @@ in vibrational states higher than those measured in the laboratory.
 % to identify lines with vibrational states $v>2$ for KCl and $v>4$ for NaCl.  
 
 In using these catalogs,
-we found a systematic discrepancy %in 
+we found a systematic discrepancy 
 between the rest frequencies
 reported by \citet{Barton2014a}, and those given by \citet{Caris2004a} and
 \citet{Caris2002a} and the catalogs generated from them: the KCl lines appear
-to be systematically offset by $\sim$15-20 \kms in the Barton paper. The offset is a function of
-the vibrational
+to be systematically offset by $\sim$15-20 \kms in the Barton paper; the Barton data
+are also discrepant with the more recent \citet{Cabezas2016a} work that
+cataloged only NaCl lines. The offset is a function of the vibrational
 and rotational energy states, indicating that it resulted from an incorrect rotational
 and/or distortion constant.  We correct for this error by performing a bilinear fit
 in frequency as a function of $v_u$ and $J_u$.  In the transitions available
@@ -273,9 +274,9 @@ known detections include the carbon star envelope IRC +10216
 \citep{Cernicharo1987a,Agundez2012a}, the post-AGB star envelope CRL 2688
 \citep{Highberger2003a}, and the oxygen-rich evolved star envelopes of VY Canis
 Majoris and IK Tauri \citep{Milam2007a}. To our knowledge, \sourcei is only the
-fifth astronomical source in which KCl and NaCl have been detected.  However,
-there were no detections of vibrationally excited NaCl or KCl in any of the
-previous observations,
+fifth astronomical source in which KCl and NaCl have been detected.
+The only previous detection of vibrationally excited NaCl was of the v=1
+line in IRAS +10216 \citep{Quintana-Lacaci2016a}, 
 % (\citealt{Agundez2012a} presented the most systematic study of salt lines, 
 %which only included detections of v=0 rotational transitions),
 while \sourcei exhibits clear emission up to v=6 in both NaCl and KCl.
