--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -232,6 +232,7 @@ in vibrational states higher than those measured in the laboratory.
 \rlp{There's a paper by Cabezas et al, ApJ 2016 that claims to derive highly
 accurate frequencies, A coefficients, etc for NaCl up to J=150 and v=8; how
 does that fit into this story??}
+\ag{Added a reference.  Mostly, they fit the CDMS/SLAIM catalogs.}
 
 In using these catalogs,
 we found a systematic discrepancy 
