switch to Cabezas

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -232,26 +232,26 @@ in vibrational states higher than those measured in the laboratory.
 \rlp{There's a paper by Cabezas et al, ApJ 2016 that claims to derive highly
 accurate frequencies, A coefficients, etc for NaCl up to J=150 and v=8; how
 does that fit into this story??}
-\ag{Added a reference.  Mostly, they fit the CDMS/SLAIM catalogs.}
+\ag{Added a reference.  Mostly, they fit the CDMS/SLAIM catalogs.  I've also switched
+to using the Cabezas values in the tables for NaCl.}
 
-In using these catalogs,
-we found a systematic discrepancy 
-between the rest frequencies
-reported by \citet{Barton2014a}, and those given by \citet{Caris2004a} and
-\citet{Caris2002a} and the catalogs generated from them: the KCl lines appear
-to be systematically offset by $\sim$15-20 \kms in the Barton paper; the Barton data
-are also discrepant with the more recent \citet{Cabezas2016a} work that
-cataloged only NaCl lines. The offset is a function of the vibrational
-and rotational energy states, indicating that it resulted from an incorrect rotational
-and/or distortion constant.  We correct for this error by performing a bilinear fit
-in frequency as a function of $v_u$ and $J_u$.  In the transitions available
-in both catalogs
-the resulting frequency differences are generally $<0.1$ \kms, which is more than 
-sufficient for a reliable match to our observational spectra.  We then applied
-these fitted models to the higher-$v$ states tabulated by Barton to get corrected rest frequencies.
-We note that the values printed in \citet{Barton2014a} differ from those in the digital
-catalogs hosted on \url{exomol.com}, so we suspect the error was merely a transcription
-error of some sort.
+In using these catalogs, we found a systematic discrepancy between the rest
+frequencies reported by \citet{Barton2014a}, and those given by
+\citet{Caris2004a} and \citet{Caris2002a} and the catalogs generated from them:
+the KCl lines appear to be systematically offset by $\sim$15-20 \kms in the
+Barton paper.  The Barton data are also discrepant with the more recent
+\citet{Cabezas2016a} work that cataloged only NaCl lines. The offset is a
+function of the vibrational and rotational energy states, indicating that it
+resulted from an incorrect rotational and/or distortion constant.  We correct
+for this error by performing a bilinear fit in frequency as a function of $v_u$
+and $J_u$.  In the transitions available in both catalogs the resulting
+frequency differences are generally $<0.1$ \kms, which is more than sufficient
+for a reliable match to our observational spectra.  We then applied these
+fitted models to the higher-$v$ states tabulated by Barton to get corrected
+rest frequencies for KCl, while for NaCl we used the \citet{Cabezas2016a}
+values.  We note that the values printed in \citet{Barton2014a} differ from
+those in the digital catalogs hosted on \url{exomol.com}, so we suspect the
+error was merely a transcription error of some sort.
 %A more detailed re-fitting and prediction of the frequencies is beyond the
 %scope of this \emph{Letter}, but is certainly warranted for follow-up efforts.
 
