note to self about C-rates

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -474,6 +474,7 @@ with a rotational temperature similar to the dust continuum temperature implies
 the rotational transitions are in local thermodynamic equilibirum with gas at 
 that temperature, we can infer a lower limit on the local density.
 
+\ag{TODO: use collision rates from \citet{Quintana-Lacaci2016a}}
 We assume the collisional constants for NaCl are the same as those for SiS,
 which has a similar molecular weight, meaning the collisional constants are
 $C\sim10^{-10}$--$10^{-14}$ cm$^{-3}$ \pers \citep{Dayou2006a}. 
