--- a/extracted.bib
+++ b/extracted.bib
@@ -635,6 +635,57 @@
   eid =           {A48},
 }
 
+@article{Quintana-Lacaci2016a,
+  author =        {{Quintana-Lacaci}, G. and {Cernicharo}, J. and
+                   {Ag{\'u}ndez}, M. and {Velilla Prieto}, L. and
+                   {Castro-Carrizo}, A. and {Marcelino}, N. and
+                   {Cabezas}, C. and {Pe{\~n}a}, I. and {Alonso}, J.~L. and
+                   {Z{\'u}{\~n}iga}, J. and {Requena}, A. and
+                   {Bastida}, A. and {Kalugina}, Y. and {Lique}, F. and
+                   {Gu{\'e}lin}, M.},
+  journal =       {\apj},
+  month =         feb,
+  pages =         {192},
+  title =         {{Hints of a Rotating Spiral Structure in the
+                   Innermost Regions around IRC+10216}},
+  volume =        {818},
+  year =          {2016},
+  abstract =      {The Atacama Large Millimeter/submillimeter Array is
+                   allowing us to study the innermost regions of the
+                   circumstellar envelopes of evolved stars with
+                   unprecedented precision and sensitivity. Key
+                   processes in the ejection of matter and dust from
+                   these objects occur in their inner zones. In this
+                   work, we present sub-arcsecond interferometric maps
+                   of transitions of metal-bearing molecules toward the
+                   prototypical C-rich evolved star IRC +10216. While
+                   Al-bearing molecules seem to be present as a roughly
+                   spherical shell, the molecular emission from the
+                   salts NaCl and KCl presents an elongation in the
+                   inner regions with a central minimum. In order to
+                   accurately analyze the emission from the NaCl
+                   rotational lines, we present new calculations of the
+                   collisional rates for this molecule based on new
+                   spectroscopic constants. The most plausible
+                   interpretation for the spatial distribution of the
+                   salts is a spiral with a NaCl mass of 0.08 {M}&sun; .
+                   Alternatively, a torus of gas and dust would result
+                   in structures similar to those observed. From the
+                   torus scenario we derive a mass of ˜1.1 × 10-4
+                   {M}&sun; . In both cases, the spiral and the torus,
+                   the NaCl structure presents an inner minimum of 27
+                   AU. In the case of the torus, the outer radius is 73
+                   AU. The kinematics of both the spiral and the torus
+                   suggests that they are slowly expanding and rotating.
+                   Alternative explanations for the presence of the
+                   elongation are explored. The presence of these
+                   features only in KCl and NaCl might be a result of
+                   their comparatively high dipole moment with respect
+                   to the Al-bearing species.},
+  doi =           {10.3847/0004-637X/818/2/192},
+  eid =           {192},
+}
+
 @article{Chiang1997a,
   author =        {{Chiang}, E.~I. and {Goldreich}, P.},
   journal =       {\apj},
