--- a/lines_in_band6.tex
+++ b/lines_in_band6.tex
@@ -1,70 +1,67 @@
 \begin{table*}[htp]
 \centering
 \caption{All observed lines in Band 6}
-\begin{tabular}{ccccccc}
+\begin{tabular}{cccccccc}
 \label{tab:all_detections_B6}
-Species & v & J$_u$ & J$_l$ & E$_U$ & Frequency & Flag \\
+Species & v & J$_u$ & J$_l$ & E$_U$ & A$_{ul}$ & Frequency & Flag \\
 \hline
-$^{39}$K$^{37}$Cl & 7 & 30 & 29 & 2846.1 & 214.41527 & -n \\
-$^{23}$Na$^{37}$Cl & 9 & 18 & 17 & 4547.4 & 214.43575 & cn \\
-$^{39}$K$^{35}$Cl & 6 & 29 & 28 & 2499.6 & 214.54412 & -d \\
-$^{41}$K$^{37}$Cl & 3 & 30 & 29 & 1316.8 & 214.57918 & -n \\
-$^{23}$Na$^{35}$Cl & 4 & 17 & 16 & 2139.6 & 214.74036 & cn \\
-$^{41}$K$^{35}$Cl & 2 & 29 & 28 & 940.8 & 214.90740 & cq \\
-$^{23}$Na$^{37}$Cl & 1 & 17 & 16 & 606.5 & 214.93872 & -d \\
-$^{39}$K$^{35}$Cl & 0 & 28 & 27 & 149.7 & 215.00828 & -d \\
-$^{39}$K$^{37}$Cl & 1 & 29 & 28 & 548.5 & 215.03464 & cq \\
-$^{41}$K$^{37}$Cl & 8 & 31 & 30 & 3187.6 & 215.09368 & cn \\
-$^{41}$K$^{35}$Cl & 7 & 30 & 29 & 2854.2 & 215.57755 & cn \\
-$^{39}$K$^{37}$Cl & 6 & 30 & 29 & 2473.0 & 215.73679 & -d \\
-$^{41}$K$^{37}$Cl & 2 & 30 & 29 & 935.3 & 215.87559 & -n \\
-$^{39}$K$^{35}$Cl & 5 & 29 & 28 & 2118.0 & 215.88373 & -d \\
-$^{23}$Na$^{37}$Cl & 8 & 18 & 17 & 4072.5 & 216.04057 & -n \\
-$^{39}$K$^{37}$Cl & 5 & 30 & 29 & 2096.7 & 217.06391 & -q \\
-$^{41}$K$^{37}$Cl & 1 & 30 & 29 & 550.6 & 217.17723 & -q \\
-$^{39}$K$^{35}$Cl & 4 & 29 & 28 & 1733.2 & 217.22891 & cd \\
-$^{23}$Na$^{35}$Cl & 10 & 18 & 17 & 5070.5 & 217.31725 & cn \\
-$^{39}$K$^{37}$Cl & 10 & 31 & 30 & 3957.2 & 217.47744 & -n \\
-$^{41}$K$^{35}$Cl & 0 & 29 & 28 & 156.7 & 217.54317 & -d \\
-$^{23}$Na$^{37}$Cl & 7 & 18 & 17 & 3593.1 & 217.65560 & -q \\
-$^{41}$K$^{37}$Cl & 6 & 31 & 30 & 2452.9 & 217.72366 & -n \\
-$^{39}$K$^{35}$Cl & 9 & 30 & 29 & 3635.2 & 217.79704 & cn \\
-$^{23}$Na$^{35}$Cl & 2 & 17 & 16 & 1127.5 & 217.97998 & -d \\
-$^{41}$K$^{35}$Cl & 5 & 30 & 29 & 2102.8 & 218.24805 & -n \\
-$^{39}$K$^{37}$Cl & 4 & 30 & 29 & 1717.2 & 218.39657 & cn \\
-$^{41}$K$^{37}$Cl & 0 & 30 & 29 & 162.6 & 218.48414 & cn \\
-$^{39}$K$^{35}$Cl & 3 & 29 & 28 & 1345.1 & 218.57971 & -d \\
-$^{41}$K$^{35}$Cl & 10 & 31 & 30 & 3968.1 & 218.64471 & -n \\
-$^{39}$K$^{37}$Cl & 9 & 31 & 30 & 3593.5 & 218.82568 & -q \\
-$^{23}$Na$^{37}$Cl & 0 & 18 & 17 & 104.6 & 229.24601 & -d \\
-$^{39}$K$^{35}$Cl & 6 & 31 & 30 & 2521.2 & 229.29217 & cd \\
-$^{23}$Na$^{35}$Cl & 10 & 19 & 18 & 5081.5 & 229.36540 & cn \\
-$^{41}$K$^{35}$Cl & 2 & 31 & 30 & 962.5 & 229.68227 & cd \\
-$^{23}$Na$^{37}$Cl & 7 & 19 & 18 & 3604.1 & 229.72316 & cn \\
-$^{39}$K$^{37}$Cl & 1 & 31 & 30 & 570.2 & 229.81880 & -d \\
-$^{41}$K$^{35}$Cl & 7 & 32 & 31 & 2875.9 & 229.90046 & -q \\
-$^{39}$K$^{37}$Cl & 6 & 32 & 31 & 2494.7 & 230.07072 & -d \\
-$^{41}$K$^{37}$Cl & 2 & 32 & 31 & 957.1 & 230.22070 & -q \\
-$^{41}$K$^{37}$Cl & 7 & 33 & 32 & 2843.6 & 230.31852 & cn \\
-$^{39}$K$^{35}$Cl & 0 & 30 & 29 & 171.4 & 230.32064 & -d \\
-$^{39}$K$^{35}$Cl & 5 & 31 & 30 & 2139.8 & 230.72399 & -d \\
-$^{23}$Na$^{35}$Cl & 2 & 18 & 17 & 1138.6 & 230.77883 & -d \\
-$^{39}$K$^{35}$Cl & 10 & 32 & 31 & 4025.6 & 230.81309 & -n \\
-$^{39}$K$^{35}$Cl & 4 & 31 & 30 & 1755.1 & 232.16185 & -d \\
-$^{39}$K$^{35}$Cl & 9 & 32 & 31 & 3657.1 & 232.26613 & cn \\
-$^{41}$K$^{35}$Cl & 0 & 31 & 30 & 178.7 & 232.49980 & cn \\
-$^{23}$Na$^{35}$Cl & 1 & 18 & 17 & 625.2 & 232.50998 & -d \\
-$^{41}$K$^{35}$Cl & 10 & 33 & 32 & 3990.1 & 232.69933 & cn \\
-$^{41}$K$^{35}$Cl & 5 & 32 & 31 & 2124.8 & 232.74872 & -q \\
-$^{23}$Na$^{35}$Cl & 8 & 19 & 18 & 4127.2 & 232.84920 & -q \\
-$^{39}$K$^{37}$Cl & 9 & 33 & 32 & 3615.5 & 232.89230 & -n \\
-$^{39}$K$^{37}$Cl & 4 & 32 & 31 & 1739.2 & 232.90755 & -d \\
-$^{41}$K$^{37}$Cl & 10 & 34 & 33 & 3942.7 & 232.97243 & cn \\
-$^{41}$K$^{37}$Cl & 0 & 32 & 31 & 184.6 & 233.00319 & cn \\
-$^{41}$K$^{37}$Cl & 5 & 33 & 32 & 2102.9 & 233.12954 & cn \\
-$^{23}$Na$^{37}$Cl & 5 & 19 & 18 & 2631.4 & 233.16458 & cd \\
-$^{39}$K$^{35}$Cl & 3 & 31 & 30 & 1367.1 & 233.60570 & -d \\
-$^{39}$K$^{35}$Cl & 8 & 32 & 31 & 3285.5 & 233.72540 & -n \\
+$^{39}$K$^{37}$Cl & 7 & 30 & 29 & 2846.1 & 0.0065441 & 214.41527 & -n \\
+$^{39}$K$^{35}$Cl & 6 & 29 & 28 & 2499.6 & 0.0064846 & 214.54412 & -d \\
+$^{41}$K$^{37}$Cl & 3 & 30 & 29 & 1316.8 & 0.0062643 & 214.57918 & -n \\
+$^{23}$Na$^{35}$Cl & 4 & 17 & 16 & 2141.3 & 0.004800000227987766 & 214.74232 & cn \\
+$^{41}$K$^{35}$Cl & 2 & 29 & 28 & 940.8 & 0.0062217 & 214.90740 & cq \\
+$^{23}$Na$^{37}$Cl & 1 & 17 & 16 & 607.0 & 0.004600000102072954 & 214.93871 & -d \\
+$^{39}$K$^{35}$Cl & 0 & 28 & 27 & 149.7 & 0.0060872 & 215.00828 & -d \\
+$^{39}$K$^{37}$Cl & 1 & 29 & 28 & 548.5 & 0.0061622 & 215.03464 & cq \\
+$^{41}$K$^{37}$Cl & 8 & 31 & 30 & 3187.6 & 0.0066785 & 215.09368 & cn \\
+$^{41}$K$^{35}$Cl & 7 & 30 & 29 & 2854.2 & 0.0066527 & 215.57755 & cn \\
+$^{39}$K$^{37}$Cl & 6 & 30 & 29 & 2473.0 & 0.0065903 & 215.73679 & -d \\
+$^{41}$K$^{37}$Cl & 2 & 30 & 29 & 935.3 & 0.0063076 & 215.87559 & -n \\
+$^{39}$K$^{35}$Cl & 5 & 29 & 28 & 2118.0 & 0.0065309 & 215.88373 & -d \\
+$^{23}$Na$^{37}$Cl & 8 & 18 & 17 & 4076.0 & 0.005200000014156103 & 216.05316 & -n \\
+$^{39}$K$^{37}$Cl & 5 & 30 & 29 & 2096.7 & 0.0066368 & 217.06391 & -q \\
+$^{41}$K$^{37}$Cl & 1 & 30 & 29 & 550.6 & 0.006351 & 217.17723 & -q \\
+$^{39}$K$^{35}$Cl & 4 & 29 & 28 & 1733.2 & 0.0065775 & 217.22891 & cd \\
+$^{39}$K$^{37}$Cl & 10 & 31 & 30 & 3957.2 & 0.0070712 & 217.47744 & -n \\
+$^{41}$K$^{35}$Cl & 0 & 29 & 28 & 156.7 & 0.006309 & 217.54317 & -d \\
+$^{23}$Na$^{37}$Cl & 7 & 18 & 17 & 3596.2 & 0.005200000014156103 & 217.66504 & -q \\
+$^{41}$K$^{37}$Cl & 6 & 31 & 30 & 2452.9 & 0.0067722 & 217.72366 & -n \\
+$^{39}$K$^{35}$Cl & 9 & 30 & 29 & 3635.2 & 0.0070288 & 217.79704 & cn \\
+$^{23}$Na$^{35}$Cl & 2 & 17 & 16 & 1128.4 & 0.004900000058114529 & 217.98023 & -d \\
+$^{41}$K$^{35}$Cl & 5 & 30 & 29 & 2102.8 & 0.0067472 & 218.24805 & -n \\
+$^{39}$K$^{37}$Cl & 4 & 30 & 29 & 1717.2 & 0.0066834 & 218.39657 & cn \\
+$^{41}$K$^{37}$Cl & 0 & 30 & 29 & 162.6 & 0.0063947 & 218.48414 & cn \\
+$^{39}$K$^{35}$Cl & 3 & 29 & 28 & 1345.1 & 0.0066243 & 218.57971 & -d \\
+$^{41}$K$^{35}$Cl & 10 & 31 & 30 & 3968.1 & 0.0071882 & 218.64471 & -n \\
+$^{39}$K$^{37}$Cl & 9 & 31 & 30 & 3593.5 & 0.0071216 & 218.82568 & -q \\
+$^{23}$Na$^{37}$Cl & 0 & 18 & 17 & 104.6 & 0.005499999970197678 & 229.24605 & -d \\
+$^{39}$K$^{35}$Cl & 6 & 31 & 30 & 2521.2 & 0.0079266 & 229.29217 & cd \\
+$^{41}$K$^{35}$Cl & 2 & 31 & 30 & 962.5 & 0.0076055 & 229.68227 & cd \\
+$^{23}$Na$^{37}$Cl & 7 & 19 & 18 & 3607.2 & 0.006099999882280827 & 229.73281 & cn \\
+$^{39}$K$^{37}$Cl & 1 & 31 & 30 & 570.2 & 0.0075327 & 229.81880 & -d \\
+$^{41}$K$^{35}$Cl & 7 & 32 & 31 & 2875.9 & 0.0080792 & 229.90046 & -q \\
+$^{39}$K$^{37}$Cl & 6 & 32 & 31 & 2494.7 & 0.0080035 & 230.07072 & -d \\
+$^{41}$K$^{37}$Cl & 2 & 32 & 31 & 957.1 & 0.0076602 & 230.22070 & -q \\
+$^{41}$K$^{37}$Cl & 7 & 33 & 32 & 2843.6 & 0.0081175 & 230.31852 & cn \\
+$^{39}$K$^{35}$Cl & 0 & 30 & 29 & 171.4 & 0.0074932 & 230.32064 & -d \\
+$^{39}$K$^{35}$Cl & 5 & 31 & 30 & 2139.8 & 0.0079833 & 230.72399 & -d \\
+$^{23}$Na$^{35}$Cl & 2 & 18 & 17 & 1139.5 & 0.005799999926239252 & 230.77917 & -d \\
+$^{39}$K$^{35}$Cl & 10 & 32 & 31 & 4025.6 & 0.0084745 & 230.81309 & -n \\
+$^{39}$K$^{35}$Cl & 4 & 31 & 30 & 1755.1 & 0.0080403 & 232.16185 & -d \\
+$^{39}$K$^{35}$Cl & 9 & 32 & 31 & 3657.1 & 0.0085358 & 232.26613 & cn \\
+$^{41}$K$^{35}$Cl & 0 & 31 & 30 & 178.7 & 0.0077121 & 232.49980 & cn \\
+$^{23}$Na$^{35}$Cl & 1 & 18 & 17 & 625.7 & 0.005799999926239252 & 232.50998 & -d \\
+$^{41}$K$^{35}$Cl & 10 & 33 & 32 & 3990.1 & 0.0086761 & 232.69933 & cn \\
+$^{41}$K$^{35}$Cl & 5 & 32 & 31 & 2124.8 & 0.008194 & 232.74872 & -q \\
+$^{23}$Na$^{35}$Cl & 8 & 19 & 18 & 4130.7 & 0.006500000134110451 & 232.85904 & -q \\
+$^{39}$K$^{37}$Cl & 9 & 33 & 32 & 3615.5 & 0.0085958 & 232.89230 & -n \\
+$^{39}$K$^{37}$Cl & 4 & 32 & 31 & 1739.2 & 0.0081166 & 232.90755 & -d \\
+$^{41}$K$^{37}$Cl & 10 & 34 & 33 & 3942.7 & 0.0086958 & 232.97243 & cn \\
+$^{41}$K$^{37}$Cl & 0 & 32 & 31 & 184.6 & 0.007766 & 233.00319 & cn \\
+$^{41}$K$^{37}$Cl & 5 & 33 & 32 & 2102.9 & 0.0082311 & 233.12954 & cn \\
+$^{23}$Na$^{37}$Cl & 5 & 19 & 18 & 2633.6 & 0.006200000178068876 & 233.16920 & cd \\
+$^{39}$K$^{35}$Cl & 3 & 31 & 30 & 1367.1 & 0.0080975 & 233.60570 & -d \\
+$^{39}$K$^{35}$Cl & 8 & 32 & 31 & 3285.5 & 0.0085974 & 233.72540 & -n \\
 \hline
 \end{tabular}
 
